{
    "name": "UserInput",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "3da3b365-324e-4fcc-b289-8a08e9107b5e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "e1628d9a-be0b-4fed-b664-f14b6078129a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "de0c7083-0866-4375-856f-8e2c4164e8a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a5671e6e-1c05-4adf-9fb1-1366ce8b6cf1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Key1",
                    "type": "Button",
                    "id": "433912a9-0d1e-4632-8a7e-fc7d585601f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3863105c-218f-4c23-bcfc-8dd00f06c832",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard;Mouse + keyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63d4b6c3-039f-41d3-bf21-6fc9a63020b6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard;Mouse + keyboard",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8820c9ef-3c60-45ca-89c0-3f9ae8612a8f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PointerParameters",
            "id": "d3032e71-f0d8-4331-9500-f353c12f388b",
            "actions": [
                {
                    "name": "PointerID",
                    "type": "Value",
                    "id": "cab3c58a-95d8-412f-9bc8-47e68ed42817",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "7fed934a-5f15-45a6-bd84-ac71dd341493",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98285b7e-0b67-4d9b-9f21-9b7ff01c04e7",
                    "path": "<Mouse>/pointerId",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "PointerID",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bde7d2d-3e45-4156-8570-c4588edc5697",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse + keyboard",
            "bindingGroup": "Mouse + keyboard",
            "devices": []
        }
    ]
}